--- a/WolvenKit/Views/Dialogs/AddChunkDialog.xaml
+++ b/WolvenKit/Views/Dialogs/AddChunkDialog.xaml
@@ -3,40 +3,80 @@
     x:Class="WolvenKit.Views.Dialogs.AddChunkDialog"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
     xmlns:reactiveUi="http://reactiveui.net"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
     xmlns:hc="https://handyorg.github.io/handycontrol"
-    xmlns:dialogs="clr-namespace:WolvenKit.ViewModels.Dialogs;assembly=WolvenKit.App">
+    xmlns:dialogs="clr-namespace:WolvenKit.ViewModels.Dialogs;assembly=WolvenKit.App"
+    mc:Ignorable="d" 
+    d:DesignHeight="600" d:DesignWidth="800"
+    Width="600"
+    Height="Auto"
+    Background="{StaticResource ContentBackgroundAlt3}"
+    >
     
 
-    <Grid>
+    <Grid Margin="20">
 
-        <Grid.Resources>
-            <ResourceDictionary>
-                <ResourceDictionary.MergedDictionaries>
-                    <hc:ThemeResources />
-                    <hc:Theme />
-                </ResourceDictionary.MergedDictionaries>
-            </ResourceDictionary>
-        </Grid.Resources>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="50"/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
 
-        <Grid Margin="0,50,0,0">
-            <Button
-                Width="150"
-                HorizontalAlignment="Right"
-                Content="Confirm" />
-            <Button
-                Width="150"
-                HorizontalAlignment="Left"
-                Content="Cancel" />
-        </Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <TextBlock
+            Text="Add a Class to the DataBuffer"
+            FontSize="18"
+            VerticalAlignment="Center"/>
+        <TextBlock
+            Text="You'll be able to adjust parameters once the class is created. Below are some classes from this DataBuffer:"
+            Grid.Row="1"
+            Margin="0,10,0,10"
+            TextWrapping="Wrap"
+            VerticalAlignment="Center"/>
+        <ItemsControl
+            ItemsSource="{Binding ExistingClasses, Mode=OneWay}"
+            Margin="-2,5,-2,5"
+            Grid.Row="2">
+            <ItemsControl.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <WrapPanel />
+                </ItemsPanelTemplate>
+            </ItemsControl.ItemsPanel>
+            <ItemsControl.ItemTemplate>
+                <DataTemplate>
+                    <Button Content="{Binding}" Padding="5,3" Margin="2" Click="SetSelectedClass"/>
+                </DataTemplate>
+            </ItemsControl.ItemTemplate>
+        </ItemsControl>
         <hc:ComboBox
-            Width="380"
-            Margin="0,0,0,0"
-            VerticalAlignment="Top"
-            hc:InfoElement.Title="Type"
-            hc:InfoElement.TitlePlacement="Left"
-            hc:InfoElement.TitleWidth="140"
+            Grid.Row="3"
+            VerticalAlignment="Center"
+            Background="Transparent"
             IsEditable="True"
-            Text="None" />
+            ItemsSource="{Binding Classes}"
+            SelectedItem="{Binding SelectedClass}">
+            <ComboBox.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <VirtualizingStackPanel />
+                </ItemsPanelTemplate>
+            </ComboBox.ItemsPanel>
+        </hc:ComboBox>
+        <Grid Grid.Row="4" Height="28" Grid.ColumnSpan="2" Margin="5">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+            <TextBlock Grid.Column="1" VerticalAlignment="Center" Foreground="{StaticResource WolvenKitRed}"/>
+            <Button Command="{Binding CancelCommand}" Grid.Column="2"   Content="Cancel" Margin="10,0,0,0" Padding="12,0" HorizontalAlignment="Right"/>
+            <Button Command="{Binding CreateCommand}" Grid.Column="3" Content="Create" Margin="10,0,0,0" Padding="12,0" HorizontalAlignment="Right"/>
+        </Grid>
     </Grid>
 </reactiveUi:ReactiveUserControl>
