--- a/WolvenKit/Views/Templates/RedIntegerEditor.xaml
+++ b/WolvenKit/Views/Templates/RedIntegerEditor.xaml
@@ -16,6 +16,9 @@
             MaxValue="{Binding MaxValue, Mode=OneWay}"
             NumberDecimalDigits ="{Binding NumberDecimalDigits, Mode=OneWay}"
             IsScrollingOnCircle="False"
+            BorderThickness="0"
+            Margin="5,0,0,0"
+            Padding="0"
             />
         
     </Grid>
