--- a/WolvenKit/Views/Templates/RedWorldPositionEditor.xaml
+++ b/WolvenKit/Views/Templates/RedWorldPositionEditor.xaml
@@ -1,4 +1,4 @@
-<UserControl x:Class="WolvenKit.Views.Editors.RedVector3Editor"
+<UserControl x:Class="WolvenKit.Views.Editors.RedWorldPositionEditor"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -8,7 +8,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="100" d:DesignWidth="400">
 
-    <Grid DataContext="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:RedVector3Editor}}}">
+    <Grid DataContext="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:RedWorldPositionEditor}}}">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="20"/>
             <ColumnDefinition />
