--- a/WolvenKit/Views/Templates/RedRefEditor.xaml
+++ b/WolvenKit/Views/Templates/RedRefEditor.xaml
@@ -11,8 +11,24 @@
 
     <Grid DataContext="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:RedRefEditor}}}">
 
-        <TextBox x:Name="TextBox" helpers:TextBoxBehavior.TripleClickSelectAll="True"
-            Text="{Binding Text}"
-            />
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="Auto" MinWidth="50" />
+        </Grid.ColumnDefinitions>
+        <TextBox
+            x:Name="PathBox"
+            helpers:TextBoxBehavior.TripleClickSelectAll="True"
+            Text="{Binding Path}" />
+        <TextBox
+            x:Name="HashBox"
+            helpers:TextBoxBehavior.TripleClickSelectAll="True"
+            Text="{Binding Hash}"
+            Grid.Column="1"
+            ToolTip="Depot Hash"
+            PreviewTextInput="NumberValidationTextBox" 
+            IsReadOnly="True"
+            Foreground="#666666"
+            BorderBrush="{StaticResource BorderAlt}"
+            BorderThickness="1,0,0,0"/>
     </Grid>
 </UserControl>
