--- a/WolvenKit/Views/Editors/RedTypeView.xaml
+++ b/WolvenKit/Views/Editors/RedTypeView.xaml
@@ -97,14 +97,14 @@
             <DataTemplate x:Key="DeleteButton">
                 <StackPanel Orientation="Horizontal" Visibility="{Binding IsInArray, Converter={StaticResource Boolean2VisibilityConverter}}">
                     <ToggleButton x:Name="DeleteButton" HorizontalAlignment="Left" IsChecked="{Binding IsDeleteReady}" 
-                        Margin="0,-4,0,-2" Padding="0"
+                        Margin="0,0,0,0" Padding="0"
                         VerticalAlignment="Center" ToolTip="Delete Element">
                         <ToggleButton.Style>
                             <Style TargetType="ToggleButton" BasedOn="{StaticResource ToggleButtonCustom}">
                                 <Setter Property="Template">
                                     <Setter.Value>
                                         <ControlTemplate>
-                                            <Grid Height="20" Width="20" Background="Transparent">
+                                            <Grid Height="12" Width="20" Background="Transparent">
                                                 <iconPacks:PackIconVaadinIcons Kind="Trash" Foreground="{StaticResource WolvenKitRed}"
                                         VerticalAlignment="Center" HorizontalAlignment="Left" Padding="2"/>
                                             </Grid>
@@ -129,7 +129,7 @@
                         </ToggleButton.Style>
                     </ToggleButton>
                     <Button x:Name="RealDeleteButton" Command="{Binding DeleteItemCommand}"
-                        Margin="2,-4,0,-2" Padding="0" Height="20" Width="20"
+                        Margin="0,0,0,0" Padding="0" Height="12" Width="20"
                         VerticalAlignment="Center" ToolTip="Delete Element">
                         <Button.Style>
                             <Style  TargetType="Button" BasedOn="{StaticResource ButtonCustom}">
@@ -141,7 +141,62 @@
                                 </Style.Triggers>
                             </Style>
                         </Button.Style>
-                    <iconPacks:PackIconVaadinIcons Kind="Trash" Foreground="{StaticResource WolvenKitRed}"
+                        <iconPacks:PackIconVaadinIcons Kind="Trash" Foreground="{StaticResource WolvenKitRed}"
+                        VerticalAlignment="Center" Padding="2,0"/>
+                    </Button>
+                </StackPanel>
+            </DataTemplate>
+            <DataTemplate x:Key="DeleteAllButton">
+                <StackPanel Orientation="Horizontal" Visibility="{Binding IsEnabled, ElementName=RealDeleteButton, Converter={StaticResource Boolean2VisibilityConverter}}">
+                    <ToggleButton x:Name="DeleteButton" HorizontalAlignment="Left" IsChecked="{Binding IsDeleteReady}" 
+                        Margin="0,0,0,0" Padding="0"
+                        VerticalAlignment="Center" ToolTip="Delete All Items">
+                        <ToggleButton.Style>
+                            <Style TargetType="ToggleButton" BasedOn="{StaticResource ToggleButtonCustom}">
+                                <Setter Property="Template">
+                                    <Setter.Value>
+                                        <ControlTemplate>
+                                            <Grid Height="12" Background="Transparent">
+                                                <StackPanel Orientation="Horizontal">
+                                                    <iconPacks:PackIconVaadinIcons Kind="Trash" Foreground="{StaticResource WolvenKitRed}"
+                                VerticalAlignment="Center" Padding="2"/>
+                                                    <TextBlock Text="Delete All Items" VerticalAlignment="Center" Margin="1,0,4,0" Foreground="{StaticResource WolvenKitRed}" />
+                                                </StackPanel>
+                                            </Grid>
+                                        </ControlTemplate>
+                                    </Setter.Value>
+                                </Setter>
+                                <Style.Triggers>
+                                    <DataTrigger Binding="{Binding IsArray}" Value="False">
+                                        <Setter Property="Visibility" Value="Collapsed"/>
+                                    </DataTrigger>
+                                    <Trigger Property="IsChecked" Value="True">
+                                        <Setter Property="Template">
+                                            <Setter.Value>
+                                                <ControlTemplate>
+                                                    <TextBlock Text="Confirm?" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="3,0,0,0" />
+                                                </ControlTemplate>
+                                            </Setter.Value>
+                                        </Setter>
+                                    </Trigger>
+                                </Style.Triggers>
+                            </Style>
+                        </ToggleButton.Style>
+                    </ToggleButton>
+                    <Button x:Name="RealDeleteButton" Command="{Binding DeleteAllCommand}"
+                        Margin="0,0,0,0" Padding="0" Height="12" Width="20"
+                        VerticalAlignment="Center" ToolTip="Delete All">
+                        <Button.Style>
+                            <Style  TargetType="Button" BasedOn="{StaticResource ButtonCustom}">
+                                <Setter Property="Visibility" Value="Collapsed" />
+                                <Style.Triggers>
+                                    <DataTrigger Binding="{Binding IsChecked, ElementName=DeleteButton}" Value="True">
+                                        <Setter Property="Visibility" Value="Visible" />
+                                    </DataTrigger>
+                                </Style.Triggers>
+                            </Style>
+                        </Button.Style>
+                        <iconPacks:PackIconVaadinIcons Kind="Trash" Foreground="{StaticResource WolvenKitRed}"
                         VerticalAlignment="Center" Padding="2"/>
                     </Button>
                 </StackPanel>
@@ -286,6 +341,7 @@
                             <ContentPresenter ContentTemplate="{StaticResource ForceLoadButton}" />
                             <ContentPresenter ContentTemplate="{StaticResource AddToCompiledDataButton}" />
                             <ContentPresenter ContentTemplate="{StaticResource AddHandleButton}" />
+                            <ContentPresenter ContentTemplate="{StaticResource DeleteAllButton}" />
                         </StackPanel>
                         </DataTemplate>
                     </converters:RedEditorTemplateSelector.RedTypeViewer>
@@ -313,6 +369,7 @@
                                     <ContentPresenter ContentTemplate="{StaticResource ForceLoadButton}" />
                                     <ContentPresenter ContentTemplate="{StaticResource AddToArrayButton}" />
                                     <ContentPresenter ContentTemplate="{StaticResource AddHandleButton}" />
+                                    <ContentPresenter ContentTemplate="{StaticResource DeleteAllButton}" />
                                 </StackPanel>
                             </Border>
                             <ItemsControl ItemsSource="{Binding Properties}" ItemTemplate="{StaticResource ItemTemplate}" Grid.Row="1" AlternationCount="{Binding RelativeSource={RelativeSource Self}, Path=Items.Count}">
@@ -379,6 +436,7 @@
                     <ContentPresenter ContentTemplate="{StaticResource AddToCompiledDataButton}" Content="{Binding}"/>
                     <ContentPresenter ContentTemplate="{StaticResource AddToArrayButton}" Content="{Binding}"/>
                     <ContentPresenter ContentTemplate="{StaticResource AddHandleButton}" Content="{Binding}" />
+                    <ContentPresenter ContentTemplate="{StaticResource DeleteAllButton}" Content="{Binding}" />
                 </StackPanel>
             </Grid>
         </Border>
